--- a/package.json
+++ b/package.json
@@ -21,9 +21,13 @@
   "devDependencies": {
     "coffee-loader": "^0.7.3",
     "coffee-script": "^1.12.5",
+    "css-loader": "^0.28.1",
     "html-webpack-plugin": "^2.28.0",
+    "node-sass": "^4.5.2",
     "pug": "^2.0.0-rc.1",
     "pug-loader": "^2.3.0",
+    "sass-loader": "^6.0.3",
+    "style-loader": "^0.17.0",
     "webpack": "^2.5.1",
     "webpack-dev-server": "^2.4.5"
   }
