--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "NODE_ENV=development webpack-dev-server",
-    "test": "karma start",
+    "start": "webpack-dev-server",
     "bundle": "webpack"
   },
   "repository": {
