--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "pager",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "",
-  "main": "dist/index.min.js",
+  "main": "pager.js",
   "scripts": {
     "start": "webpack-dev-server",
     "bundle": "webpack",
-    "bundle:production": "cross-env NODE_ENV=production webpack"
+    "compile": "coffee -c pager.coffee"
   },
   "repository": {
     "type": "git",
